--- a/AngularApp/src/app/view-employee/view-employee.component.html
+++ b/AngularApp/src/app/view-employee/view-employee.component.html
@@ -55,7 +55,7 @@
     <br><br>
     <div class="wrap">
         <div class="search">
-          <input type="textbox" class="searchTerm" placeholder="What are you looking for?" [(ngModel)] = "Gender">
+          <input type="textbox" class="searchTerm" placeholder="Search by name" [(ngModel)] = "Gender">
           <button type="submit" class="searchButton" (click) = "onSearchFilter()">Search</button>
           <button style="margin:-0.2px;" type="submit" class="searchButton" (click) = "onSearchFilterClear()" >Clear</button>
         </div>
